# theme-notifier

./: .gitignore  CMakeLists.txt
inc/: AppDelegate.h
src/: main.cpp  theme.mm
